--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" scr="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
 
         <!-- we define a new 'actions' div to contain statistics, order, and share buttons -->
