--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
-    <meta name="viewport" content="with-device-width, initial-scale=1.0">
+    <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <!--<link type="text/css" rel="stylesheet" -->
           <!--href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">-->
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
@@ -13,40 +13,6 @@
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300itallic,400itallic,500itallic,700itallic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300itallic,400itallic,600itallic,700itallic,300,400,600,700,800" rel="stylesheet" type="text/css">
-    <!--
-    <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-      }
-      .container {
-        width: 960px;
-      }
-      p.lead {
-        padding-top: 15px;
-      }
-      .navigation, .pitch, .section1, .section2, .faq, .footer {
-        padding: 10px 0px 10px 0px;
-      }
-      .video, .thermometer, .order, .social {
-        border: 1px dotted;
-        text-align: center;
-      }
-      .video {
-        /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-        height: 124px;
-        line-height: 124px;
-      }
-      .thermometer, .order, .social {
-        /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-        height: 40px;
-        line-height: 40px;
-      }
-      div.row {
-        border: 1px solid;
-      }
-    </style>
-    -->
     <style type="text/css">
     /* Large desktop */
     @media (min-width: 980px) {
@@ -66,7 +32,7 @@
 
     /* Main body and headings */
     body {font-family: 'Open Sans', Helvetica, Arial, sans-serif;}
-    .headding, .subheading {font-family: 'Ubuntu', Helvetica, Arial, sans-serif; text-align: center;}
+    .heading, .subheading {font-family: 'Ubuntu', Helvetica, Arial, sans-serif; text-align: center;}
     p.lead {padding-to: 1.5%;font-size: 24px; line-height: 30px;}
     p {font-size: 18px; line-height: 24px;}
 
