--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
             <li class="active"><a href="#">Home</a></li>
-            <li href="#about">About</li>
-            <li href="#contact">Contact</li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
             </ul>
           </div><!-- /.nav-collapse -->
         </div>
