Updated index.html for hw4

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
           <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
           <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
         </div>
+        </div>
 
       </div><!-- /row-fluid pitch -->
 
