--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <div class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
       </div>
 
